--- a/src/frontend/src/app/globals.css
+++ b/src/frontend/src/app/globals.css
@@ -26,6 +26,14 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 } */
 
+html, body, #__next {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden; /* Ngăn scroll ngoài */
+}
+
+
 @keyframes fadeIn {
   from {
     opacity: 0;
